[gd_scene load_steps=7 format=2]

[ext_resource path="res://Screens/Area2D/Enemies/Enemy.gd" type="Script" id=1]
[ext_resource path="res://common/enemy.png" type="Texture" id=2]
[ext_resource path="res://common/enemy/flameE_red.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 533.679

[sub_resource type="CircleShape2D" id=2]
radius = 51.3074

[sub_resource type="CircleShape2D" id=3]
radius = 74.7064

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea" groups=[
"AIVision",
"Draw",
]]
position = Vector2( 0, -0.594574 )
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="FlameMain" type="Sprite" parent="Sprite"]
position = Vector2( 0, 66.7773 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 4 )
offset = Vector2( 0, 44 )

[node name="FlameLeft" type="Sprite" parent="Sprite"]
position = Vector2( 17.5, 67 )
rotation = -0.261799
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 4 )
offset = Vector2( 0, 44 )

[node name="FlameRight" type="Sprite" parent="Sprite"]
position = Vector2( -17.5, 66.25 )
rotation = 0.261799
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 4 )
offset = Vector2( 0, 44 )

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 3 )

[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_DetectionArea_body_exited"]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
